# RM2019HeroVision_S

./: .gitignore  CMakeLists.txt  README.md
conf/: params.xml
inc/common/: vision.hpp
inc/detect/: armor_detect.hpp  lamppost_detect.hpp  light_detect.hpp
inc/driver/: camera_driver.hpp
inc/tools/: debug_tool.hpp
inc/utility/: xml_loader.hpp
src/common/: CMakeLists.txt  main.cpp  vision.cpp
src/detect/: CMakeLists.txt  armor_detect.cpp  lamppost_detect.cpp  light_detect.cpp
src/driver/: CMakeLists.txt
src/tools/: CMakeLists.txt  debug_tool.cpp
src/utility/: CMakeLists.txt  xml_loader.cpp
